# youtube-downloader-tui

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ytd.desktop
include/: app.hpp  config.hpp  download.hpp  history.hpp  queue.hpp
src/: app.cpp  config.cpp  download.cpp  history.cpp  main.cpp  queue.cpp
